# sps_genai_assignment

./: .gitignore  main.py  pyproject.toml  train_cifar10.py
app/: bigram_model.py  cifar10_classifier.py  embedding_model.py
